fixed dark mode

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -25,7 +25,7 @@ body {
 header {
     height: 56px;
     display: flex;
-    align-items: center;
+    align-items: center; justify-content:space-between;
     gap: 14px;
 }
 
